; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/apitests/wlanapi/extr_wlanapi.c_WlanGetProfile_test.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/apitests/wlanapi/extr_wlanapi.c_WlanGetProfile_test.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@InterfaceGuid = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [1 x i32] zeroinitializer, align 4
@ERROR_INVALID_PARAMETER = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [18 x i8] c"expected failure\0A\00", align 1
@.str.2 = private unnamed_addr constant [5 x i32] [i32 116, i32 101, i32 115, i32 116, i32 0], align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @WlanGetProfile_test to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @WlanGetProfile_test() #0 {
  %1 = alloca i64, align 8
  %2 = alloca i32*, align 8
  %3 = call i64 @WlanGetProfile(i32 -1, i32* @InterfaceGuid, i8* bitcast ([1 x i32]* @.str to i8*), i32* inttoptr (i64 1 to i32*), i32** %2, i32* null, i32* null)
  store i64 %3, i64* %1, align 8
  %4 = load i64, i64* %1, align 8
  %5 = load i64, i64* @ERROR_INVALID_PARAMETER, align 8
  %6 = icmp eq i64 %4, %5
  %7 = zext i1 %6 to i32
  %8 = call i32 @ok(i32 %7, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.1, i64 0, i64 0))
  %9 = call i64 @WlanGetProfile(i32 -1, i32* null, i8* bitcast ([5 x i32]* @.str.2 to i8*), i32* null, i32** %2, i32* null, i32* null)
  store i64 %9, i64* %1, align 8
  %10 = load i64, i64* %1, align 8
  %11 = load i64, i64* @ERROR_INVALID_PARAMETER, align 8
  %12 = icmp eq i64 %10, %11
  %13 = zext i1 %12 to i32
  %14 = call i32 @ok(i32 %13, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.1, i64 0, i64 0))
  %15 = call i64 @WlanGetProfile(i32 -1, i32* @InterfaceGuid, i8* bitcast ([5 x i32]* @.str.2 to i8*), i32* null, i32** null, i32* null, i32* null)
  store i64 %15, i64* %1, align 8
  %16 = load i64, i64* %1, align 8
  %17 = load i64, i64* @ERROR_INVALID_PARAMETER, align 8
  %18 = icmp eq i64 %16, %17
  %19 = zext i1 %18 to i32
  %20 = call i32 @ok(i32 %19, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.1, i64 0, i64 0))
  ret void
}

declare dso_local i64 @WlanGetProfile(i32, i32*, i8*, i32*, i32**, i32*, i32*) #1

declare dso_local i32 @ok(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
